force-app/main/default/objects/SA_Detail__c/SA_Detail__c.object-meta.xml
<CustomObject>
    <label>SA Detail3</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>SA Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Details3</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>