force-app/main/default/objects/SA_Detail__c/fields/Customer_Handled__c.field-meta.xml
<CustomField>
    <fullName>Customer_Handled__c</fullName>
    <label>Customer Handled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>