force-app/main/default/objects/SA_Detail__c/fields/Specilization__c.field-meta.xml
<CustomField>
    <fullName>Specilization__c</fullName>
    <label>Specilization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>