force-app/main/default/objects/SA_Detail__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SA_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>