force-app/main/default/objects/SA_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Supervisor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>